# minihm

./: .gitignore  CHANGELOG.md  Main.hs  MiniHM.hs  README.md  browser.hs  index.html  load.js  make-browser.sh  minihm.cabal  minihm.wasm
app/: Main.hs
pages/: index.html  load.js
