cabal-version:   3.0
name:            minihm
version:         0.1.1.0

-- synopsis:
-- description:
license:         Apache-2.0
license-file:    LICENSE
author:          Mirek Kratochvil
maintainer:      exa.exa@gmail.com

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable minihm
  import:           warnings
  main-is:          Main.hs
  other-modules:    MiniHM
  build-depends:
    , base          >=4.15 && <5
    , haskeline
    , transformers

  hs-source-dirs:   .
  default-language: Haskell2010
